Add German translation and language switcher with premium styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
 <body>
     <header>
-        <h1>Smoke Free</h1>
-        <p class="quit-date" id="quit-date-display">Quit Date: Feb 1, 2026, 10:55 AM</p>
+        <div class="header-top">
+            <h1>Smoke Free</h1>
+            <div class="lang-selector">
+                <button class="lang-btn" data-lang="de">DE</button>
+                <button class="lang-btn" data-lang="en">EN</button>
+            </div>
+        </div>
+        <p class="quit-date" id="quit-date-display"></p>
     </header>
 
     <div class="container" id="benefits-container">
